tests/errors/integer_double_sign.experr
cannot convert String to Integer
